# tree-house

./: .gitattributes  .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: ci.yml
bindings/: CHANGELOG.md  Cargo.toml  build.rs  vendor.sh
bindings/src/: grammar.rs  lib.rs  node.rs  parser.rs  query.rs  query_cursor.rs  ropey.rs  syntax_tree.rs  syntax_tree_node.rs  tree.rs  tree_cursor.rs
bindings/src/query/: predicate.rs  property.rs
cli/: Cargo.toml  import.sh
cli/src/: build.rs  flags.rs  generate_parser.rs  genrate_parser.rs  import.rs  init.rs  load.rs  main.rs
fixtures/highlighter/: codefence_rust_doc_comments.md  combined_injections.rs  comment.html  edoc_code_combined_injection.erl  edoc_code_combined_injection_in_markdown.md  hellow_world.rs  html_in_edoc_in_erlang.erl  injectionception.rs  markdown_bold.md  nested_vec.rs  non_local.rs  parent_child_highlight_precedence.css  reference_highlight_starts_after_definition_ends.rs  rust_doc_comment.rs  rust_no_doc_comment.rs  rust_parameter_locals.rs
fixtures/injections/: edoc_code_combined_injection.erl  html_in_edoc_in_erlang.erl  injectionception.rs  nested_vec.rs  overlapping_injection.rs  rust_doc_comment.rs  rust_no_doc_comment.rs
highlighter/: CHANGELOG.md  Cargo.toml
highlighter/src/: config.rs  fixtures.rs  highlighter.rs  injections_query.rs  lib.rs  locals.rs  parse.rs  query_iter.rs  tests.rs  text_object.rs  tree_cursor.rs
skidder/: Cargo.toml
skidder/src/: build.rs  lib.rs
test-grammars/comment/: metadata.json
test-grammars/comment/src/: grammar.json  parser.c
test-grammars/css/: metadata.json
test-grammars/css/src/: grammar.json  parser.c
test-grammars/edoc/: metadata.json
test-grammars/edoc/src/: grammar.json  parser.c
test-grammars/erlang/: NOTICE  highlights.scm  metadata.json
test-grammars/erlang/src/: grammar.json  parser.c
test-grammars/html/: highlights.scm  metadata.json
test-grammars/html/src/: grammar.json  parser.c
test-grammars/markdown/: injections.scm  metadata.json
test-grammars/markdown-inline/src/: grammar.json  parser.c
test-grammars/markdown/src/: grammar.json  parser.c
test-grammars/rust/: locals.scm  metadata.json
test-grammars/rust/src/: grammar.json  parser.c
