[package]
name = "twig-sitter"
description = "Alternative rust bindings for the tree-sitter C library"
authors = ["Pascal Kuthe <pascalkuthe@pm.me>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/helix-editor/nucleo"
readme = "../README.md"
rust-version = "1.76.0"

[features]
ropey = ["dep:ropey"]

[dependencies]
ropey = { version = "1.6.1", default-features = false, optional=true }
regex-cursor = "0.1.4"
libloading = "0.8.3"
thiserror = "1.0.59"

[build-dependencies]
cc = "1.0.95"
