[package]
name = "helix-syntax"
description = "A production ready tree-sitter syntax highlighter, component of the helix-editor"
authors = ["Pascal Kuthe <pascalkuthe@pm.me>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/helix-editor/tree-sitter-helix"
readme = "../README.md"
rust-version = "1.76.0"

[dependencies]
ropey = { version = "1.6.1", default-features = false }
slotmap = "1.0"
arc-swap = "1"
hashbrown = { version = "0.14.3", features = ["raw"] }
regex = "1"
regex-cursor = "0.1.4"
bitflags = "2.4"
ahash = { version = "0.8.11", features = ["std"], default-features = false }

[dependencies.tree-sitter]
version = "0.1.0"
package = "tree-sitter-helix"
path = "../bindings"
features = ["ropey"]

[dependencies.once_cell]
version = "1.19.0"
default-features = false
features = ["std", "alloc"]
