[package]
name = "helix-syntax"
description = "A production ready tree-sitter syntax highlighter, component of the helix-editor"
authors = ["Pascal Kuthe <pascalkuthe@pm.me>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/helix-editor/tree-sitter-helix"
readme = "../README.md"
rust-version = "1.76.0"

[features]
default = ["fixtures"]
fixtures = ["dep:unicode-width", "dep:pretty_assertions"]

[dependencies]
ropey = { version = "1.6", default-features = false }
arc-swap = "1"
hashbrown = { version = "0.15" }
regex = "1"
regex-cursor = "0.1"
slab = "0.4"
unicode-width = { version = "=0.1.12", optional = true }
pretty_assertions = { version = "1.4.0", optional = true }
kstring = "2.0"

[dev-dependencies]
cov-mark = "2.0.0"
indexmap = "2.5.0"
skidder = { path = "../skidder" }

[dependencies.tree-sitter]
version = "0.1.0"
package = "twig-sitter"
path = "../bindings"
features = ["ropey"]

[dependencies.once_cell]
version = "1.19"
default-features = false
features = ["std", "alloc"]
